<resources>
    <string name="app_name">Funstoosh</string>
    <string name="title_activity_count_down_view">CountDownView</string>
    <string name="title_activity_players_view">PlayersView</string>
    <string name="title_activity_seeker_view">SeekerView</string>
    <string name="title_activity_hint_picture_gallery">HintPictureGallery</string>
    <string name="title_activity_login">Sign in</string>

    <string name="prompt_country_code">Country Code</string>
    <string name="prompt_phone_number">Phone Number</string>
    <string name="action_sign_in_short">Sign in</string>

    <string name="start_game">GO</string>
    <string name="start_group">Create group</string>
    <string name="login">login</string>
    <string name="loginwelcom">Welcome to Funster!</string>
    <string name="loginerror">succeeded/failed</string>

    <string name="seekertext">Get a Hint!</string>

    <string name="waiting">1 2 3!</string>

    <string name="group">Add friends!</string>

    <string name="picture">Picture</string>
    <string name="select_intro">Long-press a thumbnail to add an image</string>
    <string name="show_intro">Press a thumbnail to display at larger size</string>

</resources>
