<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.funstergames.funstoosh.activities.LoginActivity"
    android:background="@drawable/main_gradient">

    <!-- Login progress -->
    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/phone_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:text="@string/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView"
                android:textColor="@color/color_action_button_BG"
                android:textSize="30sp"
                android:paddingBottom="5dp" />
            <EditText
                android:id="@+id/country_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_country_code"
                android:inputType="phone"
                android:maxLines="1" />

            <EditText
                android:id="@+id/phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_phone_number"
                android:inputType="phone"
                android:maxLines="1" >
                <requestFocus/>
            </EditText>

            <Button
                android:id="@+id/login"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_sign_in_short"
                android:textStyle="bold"
                android:onClick="login"
                android:layout_width="match_parent" />

            <TextView
                android:text="@string/loginerror"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textViewError"
                android:textColor="@color/colorinputBG"
                android:textSize="16sp"
                android:gravity="center" />
        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />



</LinearLayout>
